<resources>
    <string name="app_name">InstagramClone</string>

    <string name="label_signup">Sign Up</string>
    <string name="label_login">Log In</string>
    <string name="label_home">Home</string>

    <string name="input_email">Please enter an email</string>
    <string name="input_username">Please enter an username</string>
    <string name="input_password">Please enter a password</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_login">Log In</string>

    <!--Profile Fragment-->
    <string name="input_profile_name">Please enter a profile name</string>
    <string name="input_your_bio">Please enter your bio</string>
    <string name="input_your_profession">Please enter your profession</string>
    <string name="input_your_hobbies">Please enter your hobbies</string>
    <string name="input_your_sport">Please enter your favorite sport</string>
    <string name="btn_update">Update info</string>
    <string name="key_profile_name">profile_name</string>
    <string name="key_profile_bio">profile_bio</string>
    <string name="key_profile_profession">profile_profession</string>
    <string name="key_profile_hobbies">profile_hobbies</string>
    <string name="key_profile_sport">profile_sport</string>

    <!--Share Picture Fragment-->
    <string name="btn_share_image">Share Image</string>
    <string name="input_description">Please enter a description of the image</string>

    <!--Menu-->
    <string name="title_post_image">Post Image</string>
    <string name="title_logout">Logout</string>

    <!--Users Post Activity-->
    <string name="label_users_post">User Posts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
